# python-design-patterns

./: .gitignore  readme.md  setup.cfg  setup.py
projects/data-processor/: pyproject.toml  readme.md
projects/data-processor/examples/: basic_pipeline.py  complete_pipeline_demo.py  custom_processors.py  observability_demo.py  stateful_pipeline.py
projects/data-processor/src/pipeline_framework/: __init__.py
projects/data-processor/src/pipeline_framework/adapters/: base.py  csv_adapter.py  json_adapter.py
projects/data-processor/src/pipeline_framework/commands/: base.py  pipeline_commands.py
projects/data-processor/src/pipeline_framework/core/: builder.py  models.py  pipeline.py  processor.py
projects/data-processor/src/pipeline_framework/decorators/: base.py  caching.py  logging.py  retry.py  timing.py
projects/data-processor/src/pipeline_framework/observability/: events.py  metrics.py  observers.py
projects/data-processor/src/pipeline_framework/processors/: stateful.py  transform.py
projects/data-processor/src/pipeline_framework/sinks/: base.py  factory.py  file.py  memory.py
projects/data-processor/src/pipeline_framework/sources/: base.py  factory.py  file.py  memory.py
projects/data-processor/src/pipeline_framework/strategies/: state.py  transform.py
projects/data-processor/src/pipeline_framework/utils/: exceptions.py
projects/data-processor/tests/fixtures/: sample_data.py
projects/data-processor/tests/integration/: test_command_integration.py  test_file_pipeline.py  test_observability_integration.py  test_pipeline_integration.py
projects/data-processor/tests/unit/: test_adapters.py  test_builder.py  test_commands.py  test_decorators.py  test_events.py  test_factory_pipeline.py  test_file_sinks.py  test_file_sources.py  test_metrics.py  test_models.py  test_pipeline.py  test_pipeline_config.py  test_processor.py  test_processors_concrete.py  test_sink_factory.py  test_sinks.py  test_source_factory.py  test_sources.py  test_strategies.py
projects/http-client-library/: pyproject.toml  readme.md
projects/http-client-library/examples/: basic_usage.py
projects/http-client-library/src/http_client/: __init__.py  client.py  exceptions.py  middleware.py  models.py
projects/http-client-library/src/http_client/auth/: api_key.py  base.py  basic.py  bearer.py
projects/http-client-library/src/http_client/cache/: base.py  memory.py  redis.py
projects/http-client-library/src/http_client/middlewares/: __init__.py  auth.py  logging.py  rate_limit.py
projects/http-client-library/src/http_client/rate_limit/: token_bucket.py
projects/http-client-library/src/http_client/retry/: base.py  exponential.py  jittered.py
projects/http-client-library/tests/: conftest.py  test_client.py  test_middleware.py  test_models.py
projects/http-client-library/tests/auth/: test_auth_strategies.py
projects/http-client-library/tests/cache/: test_cache.py
projects/http-client-library/tests/middlewares/: test_auth_middleware.py  test_logging_middleware.py
projects/http-client-library/tests/rate_limit/: test_token_bucket.py
projects/http-client-library/tests/retry/: test_retry_strategies.py
projects/notification-system/: .env.example  LICENSE  pyproject.toml  readme.md
projects/notification-system/config/: channels.yaml  events.yaml
projects/notification-system/examples/: factory_example.py  final_demo.py
projects/notification-system/src/notification_system/: __init__.py  manager.py
projects/notification-system/src/notification_system/channels/: __init__.py  base.py  console.py  email.py  webhook.py
projects/notification-system/src/notification_system/config/: __init__.py  settings.py
projects/notification-system/src/notification_system/core/: __init__.py  event.py  exceptions.py  notification.py
projects/notification-system/src/notification_system/decorators/: logging.py  rate_limit.py  retry.py
projects/notification-system/src/notification_system/events/: __init__.py  order_events.py  user_events.py
projects/notification-system/src/notification_system/factories/: __init__.py  channel_factory.py  decorator_factory.py
projects/notification-system/src/notification_system/processors/: __init__.py  event_processor.py  notification_mapper.py
projects/notification-system/tests/: ___init__.py
projects/notification-system/tests/intergration/: test_decorator_integration.py  test_notification_system.py
projects/notification-system/tests/unit/: test_channels.py  test_decorators.py  test_factory.py
projects/pipeline-framework/: pyproject.toml  readme.md
projects/pipeline-framework/examples/: basic_pipeline.py  factory_examples.py  pipeline_with_events.py
projects/pipeline-framework/src/pipeline_framework/: __init__.py
projects/pipeline-framework/src/pipeline_framework/core/: __init__.py  context.py  context_threadsafe.py  pipeline.py  task.py
projects/pipeline-framework/src/pipeline_framework/decorators/: __init__.py  base.py  cache.py  metrics.py  retry.py  timeout.py
projects/pipeline-framework/src/pipeline_framework/events/: __init__.py  event.py  listener.py
projects/pipeline-framework/src/pipeline_framework/events/listeners/: __init__.py  console_listener.py  (+1 more)
projects/pipeline-framework/src/pipeline_framework/factories/: __init__.py  builtin_tasks.py  exceptions.py  task_factory.py  task_registry.py
projects/pipeline-framework/src/pipeline_framework/strategies/: __init__.py  base.py  conditional.py  parallel.py  sequential.py
projects/pipeline-framework/src/pipeline_framework/utils/: __init__.py  exceptions.py
projects/pipeline-framework/tests/: conftest.py
projects/pipeline-framework/tests/integration/: test_factory_integration.py  test_pipeline_integration_with_events.py
projects/pipeline-framework/tests/unit/: test_builtin_tasks.py  test_console_listener.py  test_context.py  test_event.py  test_execution_strategies.py  test_listener.py  test_pipeline.py  test_pipeline_with_events.py  test_statistics_listener.py  test_task.py  test_task_decorators.py  test_task_factory.py  test_task_registry.py  test_threadsafe_context.py
(+100 files in other folders)
